<resources>
    <string name="app_name">My Application</string>

    <string name="bank_item_interest_rate">Interest rate: %.2f</string>
    <string name="bank_item_max_amount">Max amount: %s millions</string>
    <string name="bank_item_max_tenor">Max tenor: %d months</string>
    <string name="bank_item_min_amount">Min amount: %s millions</string>
    <string name="bank_item_min_tenor">Min tenor: %d months</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_full_name">Fullname</string>
    <string name="hint_national_id">National id</string>
    <string name="hint_province">Province</string>
    <string name="hint_monthly_income">Monthly Income</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="error_phone_invalid">Invalid phone number</string>
    <string name="error_empty_field">Field is required</string>
    <string name="error_national_id_invalid">National id is invalid</string>
    <string name="error_min_monthly_income">The income must be over 3 millions</string>
    <string name="register_loan_province_label">Province</string>
</resources>
