<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_content_padding">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/register_loan_button_submit_margin_bottom"
        android:text="@string/btn_submit"
        android:textSize="@dimen/btn_normal_text_size" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSubmit">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.myapp.myapplication.core.view.edittext.BankEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:textSize="@dimen/input_field_normal_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_loan_spacing_between_input_field"
                app:layout_constraintTop_toBottomOf="@id/inputPhoneNumber">

                <com.myapp.myapplication.core.view.edittext.BankEditText
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_full_name"
                    android:textSize="@dimen/input_field_normal_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNationalId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_loan_spacing_between_input_field"
                app:layout_constraintTop_toBottomOf="@id/inputFullName">

                <com.myapp.myapplication.core.view.edittext.BankEditText
                    android:id="@+id/edtNationalId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_national_id"
                    android:inputType="number"
                    android:textSize="@dimen/input_field_normal_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvProvinceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_loan_provice_lablel_margin_left"
                android:layout_marginTop="@dimen/register_loan_spacing_between_input_field"
                android:text="@string/register_loan_province_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNationalId" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_loan_spiner_margin_top"
                android:dropDownVerticalOffset="35dp"
                android:overlapAnchor="false"
                app:layout_constraintTop_toBottomOf="@id/tvProvinceLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputMonthlyIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_loan_spacing_between_input_field"
                app:layout_constraintTop_toBottomOf="@id/spinnerProvince">

                <com.myapp.myapplication.core.view.edittext.BankEditText
                    android:id="@+id/edtMonthlyIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_monthly_income"
                    android:inputType="number"
                    android:textSize="@dimen/input_field_normal_text_size" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>